--- a/release/release.json
+++ b/release/release.json
@@ -6,7 +6,7 @@
     "title_zh": "版本更新",
     "content": "A newer version of the app is available",
     "content_zh": "新版本可供下載",
-    "url_ios": "https://apps.apple.com/us/app/esg職fun獎賞/id1643879077",
+    "url_ios": "https://apps.apple.com/us/app/esg%E8%81%B7fun%E7%8D%8E%E8%B3%9E/id1643879077",
     "url_android": "https://play.google.com/store/apps/details?id=hk.hkca.esgbuildfun"
   },
   "maintenance": {
